--- a/src/main/resources/templates/task/list.html
+++ b/src/main/resources/templates/task/list.html
@@ -7,18 +7,14 @@
 </head>
 <body>
 <main layout:fragment="content">
-    <div class="d-flex justify-content-between align-items-center mb-2">
-        <div>
-            <h2 class="mb-1" style="font-weight: 700;">Tasks Management</h2>
-            <div class="text-muted" style="font-size: 1.1rem;">Monitor and manage all your process tasks</div>
+    <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-3 mb-md-2">
+        <div class="mb-2 mb-md-0">
+            <h2 class="mb-1 fw-bold">Tasks Management</h2>
+            <div class="text-muted fs-5">Monitor and manage all your process tasks</div>
         </div>
-        <!-- <a th:href="@{/tasks/add}"
-           class="btn btn-primary px-4 py-2"
-           style="font-weight: 600; border-radius: 2rem; background: #2563eb; border: none;"
-           role="button">Schedule Task</a> -->
     </div>
     <div class="d-flex justify-content-end mb-2">
-        <input type="text" class="form-control w-25" placeholder="Search" style="max-width: 250px; border-radius: 2rem;">
+        <input type="text" class="form-control search-bar" placeholder="Search">
     </div>
     <div th:replace="fragments/recent-tasks :: recentTasksTable(${tasks})"></div>
 </main>
