--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -44,6 +44,10 @@
             <span class="material-icons mr-3">sync_alt</span>
                 <span>Process Instances</span>
             </a>
+            <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/forms}">
+                <span class="material-icons mr-3">sync_alt</span>
+                <span>Task Forms</span>
+            </a>
             <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" href="#">
                 <span class="material-icons mr-3">bar_chart</span>
                 <span>Reports</span>
